--- a/doc/references.bib
+++ b/doc/references.bib
@@ -25,7 +25,6 @@
   year={2003}
 }
 
-
 @article{varga2007parallel,
   title={Parallel corpora for medium density languages},
   author={Varga, D{\'a}niel and Hal{\'a}csy, P{\'e}ter and Kornai, Andr{\'a}s and Nagy, Viktor and N{\'e}meth, L{\'a}szl{\'o} and Tr{\'o}n, Viktor},
@@ -174,6 +173,15 @@
     author={Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
     year={2018},
     eprint={1810.04805},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
+}
+
+@misc{strubell2019energy,
+    title={Energy and Policy Considerations for Deep Learning in NLP},
+    author={Emma Strubell and Ananya Ganesh and Andrew McCallum},
+    year={2019},
+    eprint={1906.02243},
     archivePrefix={arXiv},
     primaryClass={cs.CL}
 }
